fixing linking issues

--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -383,8 +383,8 @@ n.a
 	\resumeEnum
 	\item The product shall make heavy use of contrast to help it's usability amongst colour blind users.
 	\item The product's interface shall use intractable elements at a minimum of 1.5x1.5 cm in size to help users with reduced motor skills.
-	\item By employing standard Android SDK best practices as mentioned in LF7, the product shall adapt the user's global accessibility settings such as TTS (text to speech) and increased/decreased font sizes.
-	\item The product shall make heavy use of contrast and minimize the use of multiple colours to help colour blind users (This is also mentioned in LF5).
+	\item By employing standard Android SDK best practices as mentioned in LR1, the product shall adapt the user's global accessibility settings such as TTS (text to speech) and increased/decreased font sizes.
+	\item The product shall make heavy use of contrast and minimize the use of multiple colours to help colour blind users (This is also mentioned in UH1).
 \end{enumerate}
 % End SubSubSection
 
