--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -519,12 +519,13 @@ n.a
 
 \subsubsection{Release Requirements}
 \label{ssub:release_requirements}
+n.a
 % Begin SubSubSection
-\begin{enumerate}[{OE}1. ]
-	\resumeEnum
-	\item Maintenance and new content updates will be published at the end of each month.
-	\holdEnum
-\end{enumerate}
+% \begin{enumerate}[{OE}1. ]
+% 	\resumeEnum
+% 	\item
+% 	\holdEnum
+% \end{enumerate}
 % End SubSubSection
 
 % End SubSection
