--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -141,7 +141,7 @@ Climatar is a self-contained software solution with respect to the Android syste
 \subsection{Product Functions}
 \label{sub:product_functions}
 % Begin SubSection
-As an End User, Climatar is to present the ability to simulate regions of a world based on regional, political, general climate, and pollution levels of the world under simulation.  Users are granted the ability to make the decisions a country may be faced with based on the state of the world, and relations with other countries. However, the User is not granted a role of omnipotence, they cannot control all aspects of how the world or their region behaves. Instead, based on previous actions and the state of the country under governance, the User is presented with events, in the form of news items, which they can react to. Each event has some factor of consequence associated with it (such as: additional pollution, cost, loss of relation...), providing Climatar Users the ability to analyse the long term effects of decisions on a global and regional level. Lastly, information is presented to the user on a per region and international scale, allowing for decisions to be made with a maximized set of information to contrast.
+As an End User, Climatar is to simulate regions of a world based on the political and general (both regional and global) climate, and pollution levels of the world.  Users are granted the ability to make the decisions a country may be faced with based on the state of the world, and relations with other countries. However, the User is not granted a role of omnipotence, they cannot control all aspects of how the world or their region behaves. Instead, based on previous actions and the state of the country under governance, the User is presented with events, in the form of news items, which they can react to. Each event has some factor of consequence associated with it (such as: additional pollution, cost, loss of relation...), providing Climatar Users the ability to analyse the long term effects of decisions on a global and regional level. Lastly, information is presented to the user on a per region and international scale, allowing for decisions to be made with a maximized set of information to contrast.
 % End SubSection
 
 \subsection{User Characteristics}
@@ -309,7 +309,7 @@ Requirements being delayed, thus not included within the SRS are as follows:
 % Begin SubSubSection
 \begin{enumerate}[{LF}1. ]
 	\item The product shall minimize the use of visual adornments that would otherwise clutter the interface.
-	\item The product shall predominantly use a single colour to help develop and maintain it's brand identity.
+	\item The product shall use a single colour pallette to help develop and maintain it's brand identity.
 	\holdEnum
 \end{enumerate}
 % End SubSubSection
@@ -383,8 +383,7 @@ n.a
 	\resumeEnum
 	\item The product shall make heavy use of contrast to help it's usability amongst colour blind users.
 	\item The product's interface shall use intractable elements at a minimum of 1.5x1.5 cm in size to help users with reduced motor skills.
-	\item By employing standard Android SDK best practices as mentioned in LF7, the product shall adapt the user's global accessibility settings such as TTS (text to speech) and increased/decreased font sizes. 
-	\item The product shall make heavy use of contrast and minimize the use of multiple colours to help colour blind users (This is also mentioned in LF5).
+	\item By employing standard Android SDK best practices as mentioned in LF7, the product shall adapt the user's global accessibility settings such as TTS (text to speech) and increased/decreased font sizes.
 \end{enumerate}
 % End SubSubSection
 
@@ -690,16 +689,16 @@ Division of Labour sheet which indicating the contributions of each team member.
 \hline
 	\textbf{Contributor Name} & \textbf{Contributions}  \\
   	\hline
-  	Wenbin Yuan & Section 3.* Functional Requirements Planning and Formalization in association with Haris\\ 		\hline
-  	Haris Khan & Section 3.* Functional Requirements Planning and Formalization in association with Wenbin \\
+  	Wenbin Yuan & Section 3.* Functional Requirements Planning and Formalization in association with Haris;\\ & Revisions for section 3.*\\ 		\hline
+  	Haris Khan & Section 3.* Functional Requirements Planning and Formalization in association with Wenbin;\\ & Revisions for section 3.* \\
   	\hline
-  	Riley McGee & Section 2.* Overall Description
+  	Riley McGee & Section 2.* Overall Description; Revisions for 2.*; Proof Read and Edited Document
   	\\
   	\hline
-  	Vishesh Gulatee & Section 1.* Introduction
+  	Vishesh Gulatee & Section 1.* Introduction; Revisions for 1.*; Proof Read and Edited Document
   	\\
   	\hline
-  	James Taylor & Section 4.* Non-Functional Requirements
+  	James Taylor & Section 4.* Non-Functional Requirements; Revisions for 4.*; Proof read document
   	\\
   	\hline
 \end{tabular}
