--- a/D1/SRS.tex
+++ b/D1/SRS.tex
@@ -382,8 +382,8 @@ n.a
 \begin{enumerate}[{UH}1. ]
 	\resumeEnum
 	\item The product shall make heavy use of contrast to help it's usability amongst colour blind users.
-	\item The product's interface shall use intractable elements at a minimum of 1.5x1.5 cm in size to help users with reduced motor skills.
-	\item By employing standard Android SDK best practices as mentioned in LF7, the product shall adapt the user's global accessibility settings such as TTS (text to speech) and increased/decreased font sizes.
+	\item The product's interface shall use intractable elements at a minimum of 1x1 cm in size to help users with reduced motor skills.
+	\item By employing standard Android SDK best practices as mentioned in LR1, the product shall adapt the user's global accessibility settings such as TTS (text to speech) and increased/decreased font sizes.
 \end{enumerate}
 % End SubSubSection
 
@@ -408,7 +408,6 @@ n.a
 
 \subsubsection{Safety-Critical Requirements}
 \label{ssub:safety_critical_requirements}
-% pretty sure this is n.a - James
 n.a
 % Begin SubSubSection
 %\begin{enumerate}[{PR}1. ]
@@ -421,7 +420,7 @@ n.a
 % Begin SubSubSection
 \begin{enumerate}[{PR}1. ]
 	\resumeEnum
-	\item When performing floating-point arithmetic, the application shall favour the use double precision to minimize rounding error.
+	\item the application shall favour the use double precision to minimize rounding error.
 	\holdEnum
 \end{enumerate}
 % End SubSubSection
@@ -443,7 +442,7 @@ n.a
 \begin{enumerate}[{PR}1. ]
 	\resumeEnum
 	\item The application shall temporarily save an ongoing game in the event that it is terminated unexpectedly by the user or by the operating system in the event that memory needs to be freed.
-	\item The application shall reopen the saved game from PR11 in the event that it is launched following an unexpected termination.
+	\item The application shall reopen an ongoing game in the event that it is launched following an unexpected termination.
 	\holdEnum
 \end{enumerate}
 % End SubSubSection
