--- a/D2/Deliverable2.tex
+++ b/D2/Deliverable2.tex
@@ -140,7 +140,7 @@ Include a Division of Labour sheet which indicates the contributions of each tea
   	\hline
   	Haris Khan &  \\
   	\hline
-  	Riley McGee & Original draft of 1.* and 4.*\\
+  	Riley McGee & Original draft of 1.* and 4.* including figures for Module Uses Relation and Architecture\\
   	\hline
   	Vishesh Gulatee & \\
   	\hline
