--- a/D2/Deliverable2.tex
+++ b/D2/Deliverable2.tex
@@ -28,6 +28,10 @@
 \date{}                               
 %------------------------------------------------------------------------------
 
+% Graphix
+%------------------------------------------------------------------------------
+\graphicspath{ {figures/} }
+
 % Document
 %------------------------------------------------------------------------------
 \begin{document}
@@ -95,6 +99,14 @@ PAC is optimal for the software architecture for Climatar for the aspects as it 
 \subsection{Subsystems}
 \label{sub:subsystems}
 % Begin SubSection
+
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=120mm]{UsesRelation.png}
+%\caption{Use Case Diagram \label{usecase}}
+\end{figure}
+
 \begin{enumerate}[a)]
 	\item Provide a brief description of each subsystem. Be sure to document its purpose and relationship to other subsystems.
 \end{enumerate}
