whole document revisions

--- a/D1/SRS.tex
+++ b/D1/SRS.tex
@@ -150,7 +150,7 @@ As an End User, Climatar is to simulate regions of a world based on the politica
 The general characteristics of a user of Climatar are as follows:
 \begin{itemize}
 	\item Able to read and comprehend English.
-	\item Understands how to navigate and use an Android system, as 	well as the controls provided by an Android system.
+	\item Understands how to navigate and use an Android system, as well as the controls provided by an Android system.
 	\item The ability to see the system; including:
 	\begin{enumerate}[-]
 		\item Ability to view objects, and distinct elements on the device.
@@ -219,7 +219,7 @@ Requirements being delayed, thus not included within the SRS are as follows:
       \begin{enumerate}
         \item The user shall be able load a previous saved game.
         \item The user shall be able to start a new game by selecting a game mode.
-        \item There shall be survival mode and overlord mode avaliable to choose
+				\item Game modes shall contain survival mode and overlord mode.
         \item Upon starting the game, the user shall be periodically prompted with news events.
         \item The user shall be able to see a loading screen while loading.
       \end{enumerate}
@@ -254,11 +254,11 @@ Requirements being delayed, thus not included within the SRS are as follows:
     %---------------------------%
     %   Business Event
     %---------------------------%
-    \item User wants to interacts with game view
+    \item User wants to interact with game view
     \begin{enumerate}[{VP1}.1]
       \item User
       \begin{enumerate}
-        \item The user shall be able to move the game view around.
+				\item The user shall be able to move the map view around.
       \end{enumerate}
     \end{enumerate}
 
@@ -269,7 +269,7 @@ Requirements being delayed, thus not included within the SRS are as follows:
     \begin{enumerate}[{VP1}.1]
       \item User
       \begin{enumerate}
-        \item The user shall be able to pause the game at any time he want while the game is running.
+				\item The user shall be able to pause the game at any time he/she wants while the game is running.
       \end{enumerate}
     \end{enumerate}
 
@@ -280,7 +280,7 @@ Requirements being delayed, thus not included within the SRS are as follows:
     \begin{enumerate}[{VP1}.1]
       \item User
       \begin{enumerate}
-        \item The user shall be able to resume the game when the game is paused.
+				\item The user shall be able to resume on ongoing, paused game.
       \end{enumerate}
     \end{enumerate}
 
